updated portfolio design

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beza Portfolio</title>
+<title>Beza Kibret Portfolio</title>
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
   <div class="container">
-    <a href="#home" class="logo"><img src="images/oo.jpg" alt="Beza Logo"></a>
+    <h2 class="logo-text">Beza Kibret</h2>
+
     <div id="hamburger">☰</div>
+
     <ul id="navLinks">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -19,107 +22,141 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
+
     <button id="darkModeToggle">🌙</button>
   </div>
 </header>
 
 <section id="home" class="fade">
-  <h1>Hi, I'm Beza</h1>
-  <p>Computer Science Student & Web Developer</p>
-  <a href="C:\Users\HP\Desktop\Portfolio\cv\Beza-CV.jpg" download class="cv-btn">Download My CV</a>
+  <div class="home-container">
+
+    <div class="home-text">
+      <h1>Hi, I'm <span class="name">Beza Kibret</span></h1>
+      <p>Computer Science Student & Web Developer</p>
+      <a href="cv/Beza-CV.jpg" download class="cv-btn">Download My CV</a>
+    </div>
+
+    <div class="home-image">
+      <img src="images/oo.jpg" alt="Beza Profile">
+    </div>
+
+  </div>
 </section>
 
 <section id="about" class="fade">
   <h2>About Me</h2>
-   <P>Hi! I’m Beza, a Computer Science student and aspiring web developer.
+ <P>Hi! I’m Beza, a Computer Science student and aspiring web developer.
 I love creating interactive websites and web applications using HTML, CSS, and JavaScript.
 During my studies, I’ve built several projects, including portfolio websites, mini web apps, and online learning pages.
 I’m passionate about learning new technologies and turning ideas into real, working applications.
 On this portfolio, you can explore my projects, skills, and achievements.
 Thank you for visiting, and feel free to connect with me!</P>
+</section>
 
 <section id="skills-certificates" class="fade">
   <h2>Skills & Certificates</h2>
   <div class="cards-grid">
+
     <div class="card">
-      <img src="images/html.jpg" alt="HTML Logo">
-      <div class="card-info"><h3>HTML</h3><p>Intermediate</p></div>
+      <img src="images/html.jpg" alt="HTML">
+      <div class="card-info">
+        <h3>HTML</h3>
+        <p>Intermediate</p>
+      </div>
     </div>
+
     <div class="card">
-      <img src="images/css.jpg" alt="CSS Logo">
-      <div class="card-info"><h3>CSS</h3><p>Intermediate</p></div>
+      <img src="images/css.jpg" alt="CSS">
+      <div class="card-info">
+        <h3>CSS</h3>
+        <p>Intermediate</p>
+      </div>
     </div>
+
     <div class="card">
-      <img src="images/javascript.jpg" alt="JavaScript Logo">
-      <div class="card-info"><h3>JavaScript</h3><p>Beginner</p></div>
+      <img src="images/javascript.jpg" alt="JavaScript">
+      <div class="card-info">
+        <h3>JavaScript</h3>
+        <p>Beginner</p>
+      </div>
     </div>
+
     <div class="card">
-      <img src="images/certificate.jpg" alt="Certificate Logo">
-      <div class="card-info"><h3>Udemy Course</h3><p>HTML & CSS</p></div>
+      <img src="images/certificate.jpg" alt="Certificate">
+      <div class="card-info">
+        <h3>Udemy Course</h3>
+        <p>HTML & CSS</p>
+      </div>
     </div>
+
   </div>
 </section>
-
 <section id="projects" class="fade">
   <h2>Project Demos</h2>
+
   <div class="projects-grid">
+
     <div class="project-item">
       <video controls>
         <source src="files/pp.mp4" type="video/mp4">
       </video>
       <p class="video-caption">Portfolio Website Demo</p>
     </div>
+
+
     <div class="project-item">
       <video controls>
         <source src="files/Project demos.mp4" type="video/mp4">
       </video>
       <p class="video-caption">Online Learning Page</p>
     </div>
+
   </div>
 </section>
+
 <section id="contact" class="fade">
   <h2>Contact Me</h2>
+
   <form id="contactForm">
     <input type="text" id="name" placeholder="Your Name">
     <input type="email" id="email" placeholder="Your Email">
     <textarea id="message" placeholder="Your Message"></textarea>
     <button type="submit">Send Message</button>
   </form>
+
   <p id="formMessage"></p>
 </section>
 
-
 <footer>
   <div class="footer-container">
-    <div class="footer-links">
+
+    <div>
       <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills-certificates">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <a href="#home">Home</a><br>
+      <a href="#about">About</a><br>
+      <a href="#projects">Projects</a><br>
     </div>
-    <div class="footer-social">
-      <h3>Connect with Me</h3>
-      <a href="https://github.com/Beza-123-ww" target="_blank">GitHub</a>&nbsp; &nbsp;
-      <a href="https://linkedin.com/in/Beza" target="_blank">LinkedIn</a>&nbsp; &nbsp;
-      <a href="https://twitter.com/Beza" target="_blank">Twitter</a>&nbsp;
+
+    <div>
+      <h3>Connect</h3>
+      <a href="https://github.com/Bezakibret" target="_blank">GitHub</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://Linkedln.com/Bezakibret" target="_blank">LinkedIn</a>&nbsp;&nbsp;&nbsp;
+  
+      <a href="https://Twitter.com/Bezakibret" target="_blank">Twitter</a>
     </div>
-    <div class="footer-contact">
+<div>
       <h3>Contact</h3>
-      <p>Email: beza@kinrett.com</p>
-      <p>Phone: +251 9794666</p>
+      <p>Email: beza@kibret.com</p>
+      <p>Phone: +251 979466666</p>
     </div>
+
   </div>
-  <div class="footer-bottom">
-    <p>© 2026 Beza. All Rights Reserved.</p>
-  </div>
+
+  <p class="footer-bottom">© 2026 Beza Kibret. All Rights Reserved.</p>
 </footer>
 
 
-<button id="scrollTopBtn" title="Go to top">↑</button>
+<button id="scrollTopBtn">↑</button>
 
 <script src="script.js"></script>
 </body>
